--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+.cards {
+  margin-top: 10px;
+}
+.cardh {
+  height: 6rem;
+}
+ .icon {
+  font-size: 15px;
+ }
+
+ .hw{
+  height: 5.5rem;
+  width: 5.5rem;
+ }
+
+.size{
+  font-size: 2.5rem;
+}
+.pie {
+  height: 22.7rem;
 }
